(rule
 (targets definitions_j.ml definitions_j.mli)
 (deps definitions.atd)
 (mode promote)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets definitions_v.ml definitions_v.mli)
 (deps definitions.atd)
 (mode promote)
 (action
  (run atdgen -v %{deps})))

(rule
 (targets definitions_t.ml definitions_t.mli)
 (deps definitions.atd)
 (mode promote)
 (action
  (run atdgen -t %{deps})))

